@@ -63,6 +63,7 @@ typedef enum URJ_ERROR
     URJ_ERROR_FLASH_DETECT,
     URJ_ERROR_FLASH_PROGRAM,
     URJ_ERROR_FLASH_ERASE,
+    URJ_ERROR_FLASH_LOCK,
     URJ_ERROR_FLASH_UNLOCK,
 
     URJ_ERROR_BSDL_VHDL,
